# dioxus-launcher

./: Cargo.toml  flake.nix  run-native.sh
apps/native-test/: Cargo.toml
apps/native-test/src/: main.rs
apps/standalone/: Cargo.toml
apps/standalone/assets/: tailwind.css
apps/standalone/src/: main.rs
assets/: input.css
crates/launcher-core/: Cargo.toml
crates/launcher-core/src/: config.rs  export.rs  ext_api.rs  extension.rs  favorites.rs  filter.rs  history.rs  icons.rs  lib.rs  matching.rs  pack.rs  provider.rs  query.rs  tags.rs  userdata.rs
crates/launcher-ui/: Cargo.toml
crates/launcher-ui/src/: lib.rs  prelude.rs  state.rs  theme.rs
crates/launcher-ui/src/components/: action_bar.rs  filter_chips.rs  launcher.rs  mod.rs  notes_editor.rs  preset_bar.rs  quick_tag.rs  result_item.rs  search_bar.rs  sidebar.rs
crates/providers/: Cargo.toml
crates/providers/src/: applications.rs  calc.rs  demo.rs  extensions.rs  lib.rs  workflow.rs
extensions/: extension.schema.styx
extensions/clipboard-history/: extension.styx
extensions/quick-notes/: extension.styx
packs/: pack.schema.styx  vst-tags.styx
